--- a/Distro_Client_Web/Site.Master
+++ b/Distro_Client_Web/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %> Distro AndalanQue</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -38,6 +38,64 @@
             </Scripts>
         </asp:ScriptManager>
 
+        <style>
+        .mynav_navbar {
+            overflow: hidden;
+            background-color: #333;
+        }
+            .mynav_navbar a {
+                float: left;
+                font-size: 16px;
+                color: white;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+            }
+        .mynav_dropdown {
+            float: left;
+            overflow: hidden;
+        }
+            .mynav_dropdown .mynav_dropbtn {
+                font-size: 16px;
+                border: none;
+                outline: none;
+                color: white;
+                padding: 14px 16px;
+                background-color: inherit;
+                font-family: inherit;
+                margin: 0;
+            }
+
+            .mynav_navbar a:hover, .mynav_dropdown:hover .mynav_dropbtn {
+                background-color: darkred;
+            }
+
+        .mynav_dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+            .mynav_dropdown-content a {
+                float: none;
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+                text-align: left;
+            }
+
+                .mynav_dropdown-content a:hover {
+                    background-color: #ddd;
+                }
+
+        .mynav_dropdown:hover .mynav_dropdown-content {
+            display: block;
+        }
+    </style>
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -46,14 +104,33 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/Edit">Distro AndalanQue</a>
                 </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
-                    </ul>
+                <div class="mynav_navbar">
+                    <a runat="server" href="~/ProgresTransaksi">Progres Transaksi</a>
+                    <a runat="server" href="~/Edit">Edit Profile</a>
+                    <div class="mynav_dropdown">
+                         <button class="mynav_dropbtn">
+                            Merek Pakaian
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                            <div class="mynav_dropdown-content">
+                                <a runat="server" href="~/Nevada">Nevada</a>
+                                <a runat="server" href="~/PullAndBear">Pull And Bear</a>
+                                <a runat="server" href="~/HnM">HnM</a>
+                            </div>
+                    </div>
+                    <div class="mynav_dropdown">
+                         <button class="mynav_dropbtn">
+                            Jenis Pakaian
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                            <div class="mynav_dropdown-content">
+                                <a runat="server" href="~/Contact">Kemeja</a>
+                                <a runat="server" href="~/Contact">Hoodie</a>
+                                <a runat="server" href="~/Contact">Celana</a>
+                            </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -62,7 +139,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Distro AndalanQue Application</p>
             </footer>
         </div>
 
